force-app/main/default/objects/Account/fields/Anotacoes__c.field-meta.xml
<CustomField>
    <fullName>Anotacoes__c</fullName>
    <label>Anotações</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>