force-app/main/default/objects/Account/fields/RendaMensal__c.field-meta.xml
<CustomField>
    <fullName>RendaMensal__c</fullName>
    <label>Renda Mensal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>