force-app/main/default/objects/Account/fields/Tactiq_URL__c.field-meta.xml
<CustomField>
    <fullName>Tactiq_URL__c</fullName>
    <description>URL da transcrição gerada pelo Tactiq</description>
    <label>Tactiq URL</label>
    <type>Url</type>
</CustomField>