force-app/main/default/objects/Account/fields/Transcricao_Reuniao__c.field-meta.xml
<CustomField>
    <fullName>Transcricao_Reuniao__c</fullName>
    <label>Transcricao Reuniao</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>