force-app/main/default/objects/Account/recordTypes/Banco.recordType-meta.xml
<RecordType>
    <fullName>Banco</fullName>
    <active>true</active>
    <label>Banco</label>
</RecordType>